# SceneChat

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
backend/scenechat/: __init__.py  __main__.py  config.py  main.py
backend/scenechat/detection/: __init__.py  base.py  factory.py  prompt_learning.py  yolo.py  yoloe.py  yoloworld.py
backend/scenechat/models/: __init__.py  schemas.py
benchmarks/: run.ps1
docs/: ARCHITECTURE.md  BUILD_PLAN.md  MODEL_COMPATIBILITY.md  OPEN_DAY_RUNBOOK.md  PRIVACY_AND_SAFETY.md  TEST_PLAN.md
frontend/public/: index.html  staff.html
frontend/src/: public.js  staff.js  styles.css
prompts/: curated_questions.json  scene_analysis_system.txt
replay_assets/: README.md  manifest.json
scripts/: benchmark_detectors.py  check_environment.ps1  check_environment.sh  check_modeldeck.ps1  check_ports.ps1  check_ports.sh  download.ps1  download_detectors.ps1  download_yoloe.ps1  run.ps1  run_dev.ps1  run_dev.sh  run_gemma.ps1  run_live.ps1  run_live.sh  run_modeldeck.ps1  run_replay.ps1  run_replay.sh  setup.ps1  setup.sh  smoke_test.ps1  smoke_test.sh  stop.ps1  stop.sh  test_modeldeck_image.py  test_vllm_image.py
tests/: conftest.py
tests/hardware/: test_modeldeck_acceptance.py
tests/integration/: test_api.py
tests/unit/: test_automatic_analysis.py  test_camera_devices.py  test_config.py  test_launcher.py  test_modeldeck.py  test_models.py  test_prompt.py  test_prompt_learning.py  test_providers.py  test_replay.py  test_state.py  test_vision_parsing.py  test_yoloe.py  test_yoloworld.py
(+13 files in other folders)
