[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "scenechat"
version = "0.1.0"
description = "Local-first object detection and multimodal scene-description demonstration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
camera = ["opencv-python-headless>=4.10,<5"]
yoloe = [
  "opencv-python-headless>=4.10,<5",
  "ultralytics>=8.4,<9",
  "clip @ git+https://github.com/ultralytics/CLIP.git@0fa238b2ba553fe76dc158348d8e34625e3e2470",
]
yoloworld = [
  "opencv-python-headless>=4.10,<5",
  "ultralytics>=8.4,<9",
  "clip @ git+https://github.com/ultralytics/CLIP.git@0fa238b2ba553fe76dc158348d8e34625e3e2470",
]
test = ["pytest>=8.3,<9"]

[tool.hatch.build.targets.wheel]
packages = ["backend/scenechat"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
